--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QH'
 - !lcsh 'Opossums'
+- GITenberg
 title: Ecology of the Opossum on a Natural Area in Northeastern Kansas
 url: http://www.gutenberg.org/ebooks/37199
